--- a/lab007/pom.xml
+++ b/lab007/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bring</groupId>
-	<artifactId>jpa-startupsqlload</artifactId>
+	<artifactId>jpa-insert-data-onstart</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jpa</name>
 	<description>JPA Integration</description>
