--- a/lab008/src/main/resources/application.properties
+++ b/lab008/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=jpa
+spring.application.name=bringlabs
 # H2 Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
