--- a/lab016/src/main/resources/application.properties
+++ b/lab016/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=lab016
+spring.application.name=bringlabs
 spring.security.user.name=admin
 spring.security.user.password=admin
