--- a/lab029/src/main/resources/application.properties
+++ b/lab029/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=bringlabs
 # Keycloak Configuration for backend token validation
 keycloak.auth-server-url=http://localhost:8080/realms/bringlabs-realm
 keycloak.realm=bringlabs-realm
-keycloak.resource={your-client-id}  # The client ID for your frontend client (used to validate tokens)
+keycloak.resource={your-client-id}  # The client ID for your frontend client (used to validate tokens) This is required when 'spring boot app' itself wants a token. 
 
 # Spring Security for OAuth2 Resource Server
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/bringlabs-realm
