--- a/lab033/src/main/resources/application.properties
+++ b/lab033/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=springcloud
 spring.data.mongodb.uri=mongodb://localhost:27017/products
 
 
+logging.level.org.springframework.web=DEBUG
+
 #Above configuration is must, so as to have the spring boot app running without any errors.
 #The configuration becomes mandatory because we added a dependency in the pom.xml for mongo, so by design it attempts to check the connectivity of mongo db.
 
