--- a/lab034-bundled/inventory/src/main/resources/application.properties
+++ b/lab034-bundled/inventory/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-spring.application.name=orders
+spring.application.name=inventory-service
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 logging.level.org.springframework.jdbc.datasource.init=DEBUG
 
-server.port=8081
+server.port=8082
 
 
 #####Important to note : This project uses mysql as database. It is important that it is up during build and runtime.
