--- a/lab035-shoping/order-service/pom.xml
+++ b/lab035-shoping/order-service/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.bring</groupId>
-        <artifactId>lab035-shoping</artifactId>
+        <artifactId>shopping-parent-child-modules</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>order-service</artifactId>
