added security to eureka server with basic auth, modified downstream apps with hardcoded eureka creds in properties

--- a/lab041-shopping/inventory-service/src/main/resources/application.properties
+++ b/lab041-shopping/inventory-service/src/main/resources/application.properties
@@ -24,7 +24,11 @@ logging.level.org.springframework.jdbc.datasource.init=DEBUG
 server.port=0
 
 # Eureka client configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#Below configuration endpoint is without username and password. used when discovery-service itself is not on spring security
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#Below configuration is after making the discovery-service on spring security. credentials are hardocded here as well in discovery-service
+eureka.client.service-url.defaultZone=http://eureka:eureka@localhost:8761/eureka/
 
 
 # Custom property for a 3-digit random number
