--- a/lab041-shopping/springcloud-apigw/src/main/resources/application.properties
+++ b/lab041-shopping/springcloud-apigw/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 # Application name
 spring.application.name=springcloud-apigw
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Eureka client configuration
+#Below configuration endpoint is without username and password. used when discovery-service itself is not on spring security
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#Below configuration is after making the discovery-service on spring security. credentials are hardocded here as well in discovery-service
+eureka.client.service-url.defaultZone=http://eureka:eureka@localhost:8761/eureka/
+
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
@@ -10,6 +17,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+logging.level.org.springframework.security=DEBUG
 
 #Route for products-service
 spring.cloud.gateway.routes[0].id=products-service
