--- a/lab041-shopping/order-service/src/main/resources/application.properties
+++ b/lab041-shopping/order-service/src/main/resources/application.properties
@@ -29,7 +29,14 @@ eureka.instance.instance-id=${app.instance-id}
 
 eureka.instance.prefer-ip-address=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Eureka client configuration
+#Below configuration endpoint is without username and password. used when discovery-service itself is not on spring security
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#Below configuration is after making the discovery-service on spring security. credentials are hardocded here as well in discovery-service
+eureka.client.service-url.defaultZone=http://eureka:eureka@localhost:8761/eureka/
+
 
 
 #Important : Create a database in mysql : "create database order_service;"
