--- a/lab041-shopping/products-service/src/main/resources/application.properties
+++ b/lab041-shopping/products-service/src/main/resources/application.properties
@@ -3,7 +3,14 @@ spring.application.name=products-service
 
 spring.data.mongodb.uri=mongodb://localhost:27017/products
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Eureka client configuration
+#Below configuration endpoint is without username and password. used when discovery-service itself is not on spring security
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+#Below configuration is after making the discovery-service on spring security. credentials are hardocded here as well in discovery-service
+eureka.client.service-url.defaultZone=http://eureka:eureka@localhost:8761/eureka/
+
 
 
 server.port=0
