kafka integration push working - pull not working

--- a/lab045-shopping/order-service/src/main/resources/application.properties
+++ b/lab045-shopping/order-service/src/main/resources/application.properties
@@ -55,3 +55,11 @@ management.endpoint.health.show-details=always
 # Below is not needed as from spring 3.0 onwards this is not needed
 # spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
+
+
+# Mandatory for both producer and consumer
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer-specific properties (mandatory if producing messages)
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
