--- a/lab045-shopping/inventory-service/src/main/resources/application.properties
+++ b/lab045-shopping/inventory-service/src/main/resources/application.properties
@@ -41,3 +41,7 @@ eureka.instance.instance-id=${app.instance-id}
 # Below is not needed as from spring 3.0 onwards this is not needed
 # spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
+
+# Consumer-specific properties (mandatory if producing messages)
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonSerializer
