--- a/lab045-shopping/pom.xml
+++ b/lab045-shopping/pom.xml
@@ -22,7 +22,8 @@
     <module>products-service</module>
     <module>inventory-service</module>
     <module>discovery-service</module>
-      <module>gateway-service</module>
+    <module>gateway-service</module>
+    <module>notifications-service</module>
   </modules>
 
 
